static/styles/zulip.scss
/* ... */
#searchbox .input-append {
    position: relative;
    width: 100%;

    .icon-vector-search {
        padding: 0px;
        font-size: 20px;
        position: absolute;
        left: 10px;
        top: 10px;
        z-index: 5;
    }
}

nav .column-left {
    text-align: center;
}

nav a.no-style:hover {
    text-decoration: none;
    cursor: pointer;
}

nav .column-left .nav-logo {
    display: inline-block;
    vertical-align: top;
    margin-top: 8px;
    width: 25px;
    height: 25px;

}

nav .column-left .company-name {
    display: inline-block;
    vertical-align: top;
    text-transform: uppercase;
    margin-top: 12px;
    margin-left: 8px;
    font-size: 1.2rem;
    font-weight: 600;
    color: hsl(170, 47%, 54%);
    letter-spacing: 0.1em;
    cursor: pointer;
}

nav a .no-style {
    text-decoration: none;
}

.navbar-search {
    margin-top: 0px;
    width: auto;
    float: none;
    overflow: hidden;
    border-right: 1px solid hsl(0, 0%, 87.8%);
    height: 40px;
}

.modal-bg {
    background: #f9f9f9;
}

#search_query {
    width: 100%;
    font-size: 16px;
    height: 40px;
    padding: 0px;
    padding-left: 35px;
    padding-right: 20px;
    border: none;
    border-radius: 0px;
    font-family: 'Source Sans Pro';
    font-weight: 300;
    line-height: 40px;
}

#search_query:focus {
    box-shadow: inset 0px 0px 0px 2px hsl(204, 20%, 74%);
}

#searchbox .search_button,
#searchbox .search_button[disabled]:hover {
    position: absolute;
    right: 2px;
    top: 6px;
    background: none;
    border-radius: 0px;
    border: none;
    height: 30px;
    text-align: center;
    padding: 4px;
    color: hsl(0, 0%, 80%);
    font-size: 18px;
    box-shadow: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    text-shadow: none;
    z-index: 5;
}

#searchbox .search_button:hover {
    color: hsl(0, 0%, 0%);
}

#searchbox .search_button[disabled] {
    visibility: hidden;
}

#searchbox a.search_icon {
    color: hsl(0, 0%, 80%);
    text-decoration: none;
    display: block;
    width: 1px;
    height: 1px;
}

#searchbox a.search_icon:hover {
    color: hsl(0, 0%, 0%);
    text-decoration: none;
}

.highlight {
    background-color: hsl(51, 94%, 74%);
}

.highlight_text_inserted {
    color: hsl(122, 72%, 30%);
    background-color: hsl(120, 64%, 95%);
}

.highlight_text_deleted {
    color: hsl(0, 0%, 73%);
    text-decoration: line-through;
    background-color: hsl(7, 90%, 92%);
}

#search_arrows {
    font-size: 90%;
    letter-spacing: normal
}

div.floating_recipient {
    border-collapse: separate;
    width: 100%;
    position: relative;
}

#floating_recipient_bar {
    top: 50px;
}

.message-header-contents {
    background: hsl(0, 0%, 88%);
}

.recipient_row.sticky {
    margin-top: 22px;
}

.sticky .message_header {
    position: fixed;
    z-index: 99;
    top: 50px;
    width: 100%;
    left: 0px;
}

.sticky .message-header-wrapper {
    max-width: 1400px;
    margin: auto;
}

.sticky .message-header-contents {
    margin-left: 250px;
    margin-right: 251px;
}

#bottom_whitespace {
    display: block;
    height: 300px;
}

.loading_indicator_spinner {
    /* If you change these, make sure to adjust the constants in
       loading.make_indicator as well */
    height: 38px;
    width: 38px;
    float: left;
}

.loading_indicator_text {
    /* If you change these, make sure to adjust the constants in
       loading.make_indicator as well */
    margin-left: 5px;
    font-size: 1.2em;
    font-weight: 300;
    line-height: 38px;
}

.settings-section #admin_page_users_loading_indicator,
.settings-section #attachments_loading_indicator,
.settings-section #admin_page_deactivated_users_loading_indicator,
.settings-section #admin_page_bots_loading_indicator {
    margin: 0 auto;
}

.settings-section .loading_indicator_text {
    font-size: 12px;
    font-weight: 400;
    vertical-align: middle;
    line-height: 20px;
    display: inline-block;
    float: none;
    margin-top: 9px;
}

.settings-section .loading_indicator_spinner {
    width: 30%;
    height: 30px;
    margin-top: 7px;
    vertical-align: middle;
    display: inline-block;
}

.settings-section #default_language {
    text-decoration: none;
}

.settings-section #default_language_modal table {
    width: 90%;
    margin-top: 20px;
}

.settings-section #default_language_modal td {
    padding-left: 80px;
}

.settings-section .inline {
    display: inline !important;
}

.twitter-image,
.message_inline_image {
    position: relative;
    margin-bottom: 5px;
    margin-left: 5px;
    height: 100px;
    display: block !important;
    border: none !important;
}

.message_inline_ref {
    margin-bottom: 5px;
    margin-left: 5px;
    height: 50px;
    display: block !important;
    border: none !important;
}

.twitter-image img,
.message_inline_image img,
.message_inline_ref img {
    height: auto;
    max-height: 100%;
    float: left;
    margin-right: 10px;
}

li .message_inline_image img {
    float: none;
}

.message_inline_image_title {
    font-weight: bold;
}

.katex-html {
    line-height: initial;
    white-space: initial;
}

.katex-display .katex-html {
    line-height: 3em;
}

.katex-display {
    margin: 0em 0;
}

.tex-error {
    color: hsl(0, 0%, 50%);
}

.operator_value {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
    color: hsl(353, 70%, 65%);
}

.operator {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
}

#loading_more_messages_indicator {
    margin: 10px;
}

#loading_more_messages_indicator_box_container {
    position: absolute;
    left: 50%;
}

#loading_more_messages_indicator_box {
    position: relative;
    left: -50%;
    top: -43px;
    z-index: 1;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
}

#page_loading_indicator {
    margin: 10px auto;
}

#page_loading_indicator_box_container {
    position: absolute;
    left: 50%;
}
/* ... */

